@@ -8,6 +8,7 @@ Version 0.5
 
 - broker monitor for RabbitMQ and Redis
 - HTTP Basic Auth
+- --auth option accepts an email regexp
 - flower state can be saved with --persistent option
 - database name can be changed with --db option
 - number of in-memory tasks can be limited with --max_tasks option
